--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Tracks series to watch",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack-dev-server --host 0.0.0.0 --progress --colors --history-api-fallback"
   },
   "repository": {
     "type": "git",
@@ -21,7 +22,17 @@
   },
   "homepage": "https://github.com/phobeus/serieswatcher#readme",
   "dependencies": {
+    "@types/react": "^16.0.10",
+    "@types/react-dom": "^16.0.1",
+    "extract-text-webpack-plugin": "^3.0.1",
+    "html-webpack-plugin": "^2.30.1",
+    "raw-loader": "^0.5.1",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "ts-loader": "^3.0.5",
+    "tslint": "^5.8.0",
+    "typescript": "^2.5.3",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.3"
   }
 }
